src/rfx/tests/preprocessor/PreprocDetail_2.approved.out
exit_status:0
output:
Source output:
    #line 1 "D:/Work/my/OpenDemo/src/rfx/tests/preprocessor/PreprocDetail_2.rfx"
    
    
    
    
    
    
    A(,)
Diagnostic output:
    D:/Work/my/OpenDemo/src/rfx/tests/preprocessor/PreprocDetail_2.rfx:5:14: error: duplicate macro parameter name 'x'
    #define A(x, x) a x b x c
                 ^
