src/rfx/tests/preprocessor/PreprocDetail_2.rfx
// :RUN_RFXC -P %STD_OUTPUT% %INPUT% 

// Macro parameters must have unique names

#define A(x, x) a x b x c

A(,)